--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.0.5",
-    "hardhat": "2.22.4"
+    "hardhat": "^2.22.4"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
